--- a/page_two_of_karen_thai_menu.html
+++ b/page_two_of_karen_thai_menu.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page_two_of_karen_thai_food</title>
+    <link rel="stylesheet" href="styles_for_karen_thai_food.css">
 </head>
 <body>
-    <h2>More Entrees</h2>
+    <h2 class="heading_color">More Entrees</h2>
     
     <ol>
     
